--- a/src/pages/webservPage.css
+++ b/src/pages/webservPage.css
@@ -1,3 +1,37 @@
+nav {
+    background-color: #222;
+    width: 100%;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 20px;
+}
+
+nav ul li a {
+    color: #ccc;
+    text-decoration: none;
+    font-size: 18px;
+    transition: color 0.3s;
+}
+
+nav ul li a:hover {
+    color: #fff;
+}
+
 body {
     font-family: "Jersey 25", sans-serif;
     font-weight: 400;
@@ -14,7 +48,7 @@ header {
     position: relative;
     background: url('server_small.jpg') no-repeat center center;
     background-size: cover;
-    height: 300px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
