--- a/src/pages/defaultStyles.css
+++ b/src/pages/defaultStyles.css
@@ -2,7 +2,7 @@ body {
 	font-family: 'Courier New', Courier, monospace;
 	background-color: #fff;
 	margin: 0;
-	padding: 0;
+	padding: 0 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -11,6 +11,10 @@ body {
 h1 {
 	font-size: 2em;
 	margin-bottom: 0.5em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-justify: center;
 }
 pre {
 	font-family: 'Courier New', Courier, monospace;
